--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,12 @@
     "psr-4": {
       "Dneey\\Cloudwatch\\": "src"
     }
-  }
+  },
+  "extra": {
+    "laravel": {
+        "providers": [
+            "Dneey\\Cloudwatch\\CloudwatchServiceProvider"
+        ]
+    }
+}
 }
