--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": ">=7.1.3",
-    "maxbanton/cwh": ">=1.1"
+    "php": "^7.1.3",
+    "maxbanton/cwh": "^1.1"
   },
   "authors": [
     {
